# simplest_weather_app

./: README.md
Weather_app/: CMakeLists.txt  main.cpp
Weather_app/classes/: ImGui_utilities.cpp  ImGui_utilities.h  api_json_decomposer.cpp  api_json_decomposer.h  weather_utilities.cpp  weather_utilities.h
